# Learning-rust

./: README.md
backend/blog_api/: Cargo.toml  docker-compose.yml  questions.json
backend/blog_api/error-handler/: Cargo.toml
backend/blog_api/error-handler/src/: lib.rs
backend/blog_api/migrations/: 20230107194942_questions_table.sql  20230107195715_anwers_table.sql
backend/blog_api/src/: main.rs  store.rs
backend/blog_api/src/routes/: answer.rs  question.rs
backend/blog_api/src/types/: answer.rs  mod.rs  pagination.rs  question.rs
lang/: borrowing.rs
lang/basic-types/: arrays-slices-vectors.rs  machine-types.rs  references.rs  strings.rs  tuples.rs
lang/crates-and-modules/external-libs/: Cargo.toml
lang/crates-and-modules/external-libs/somelib/src/: lib.rs
lang/crates-and-modules/external-libs/src/: main.rs
lang/crates-and-modules/modules/src/: main.rs  single_file.rs
lang/crates-and-modules/modules/src/directory/: dlevel1.rs  dlevel2.rs  mod.rs
lang/enums-and-patterns/: enums.rs  patterns.rs
lang/error-handling/: results.rs
lang/expressions/: if-match.rs
lang/operator-overloading/: add  add.rs
lang/ownership/: moves-indexed.rs  moves.rs  shared-ownership.rs
lang/structs/: defining-methods.rs  generic-structs.rs  interior-mutability.rs  struct-types.rs
lang/traits/: associated-types.rs  defining-implementing.rs  generic-functions.rs  trait-objects.rs
web/minimal-warp/: Cargo.toml
web/minimal-warp/src/: main.rs
