[package]
name = "blog_api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.10.0"
serde_json = "1.0"
error-handler = { path = "error-handler", version = "0.1.0" }
log = "0.4"
env_logger = "0.8"
